# etl-cpc-schema

./: README.md  main.py  pyproject.toml  tasks.md  wip.py
src/cpc_etl/: __init__.py  downloader.py  parser.py  prerelease_downloader.py  validator.py
src/cpc_etl/cli/: __init__.py  commands.py
src/cpc_etl/functions/: __init__.py  etl_function.py
src/cpc_etl/pipeline/: __init__.py  orchestrator.py
tests/: __init__.py  test_downloader.py  test_parser.py
