[project]
name = "etl-cpc-schema"
version = "0.1.0"
description = "ETL process for CPC schema and definitions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.18.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "pytest>=8.4.1",
    "pyarrow>=20.0.0",
    "polars>=1.31.0",
    "beautifulsoup4>=4.13.4",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.scripts]
cpc-etl = "src.cpc_etl.cli.commands:main"

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
